<resources>
    <string name="app_name">YourGallery</string>
    <string name="title_activity_main">YourGallery</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="settings">Settings</string>
    <string name="permissions_denied">App have not permissions</string>
    <string name="title_from_phone">Phone</string>
    <string name="title_from_network">Net</string>
    <string name="title_favourite">Fav</string>
    <string name="error_photo_from_db">Failed to download photo from DB</string>
    <string name="error_user_from_db">User doesn\'t exists</string>
    <string name="error_photo_from_net">Failed to download photo from Network</string>
    <string name="error_net_unavailable">Network is unavailable</string>
    <string name="settings_login_hint">Login:</string>
    <string name="settings_password_hint">Password:</string>
    <string name="settings_password">*******</string>
    <string name="settings_sign_in">Sign in</string>
    <string name="settings_sign_out">Sign out</string>
    <string name="settings_switch_hint">Theme:</string>
    <string name="settings_theme_black">Black</string>
    <string name="settings_theme_green">Green</string>
</resources>
