<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar_app_bar_settings"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:theme="@style/AppTheme.AppBarOverlay"
        android:background="?attr/colorPrimary"
        app:titleTextColor="?attr/onColorPrimary"
        />

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_margin="16dp"
        app:layout_constraintTop_toBottomOf="@id/toolbar_app_bar_settings"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        >

        <TextView
            android:id="@+id/settings_login_hint_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:textSize="12sp"
            android:textColor="?attr/hintColor"
            android:text="@string/settings_login_hint"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            />

        <TextView
            android:id="@+id/settings_login_tv"
            android:layout_width="280dp"
            android:layout_height="42dp"
            android:textSize="16sp"
            android:textColor="?attr/textColor"
            android:gravity="center_vertical"
            android:paddingStart="4dp"
            android:paddingEnd="4dp"
            android:background="@color/colorTextView"
            app:layout_constraintTop_toBottomOf="@+id/settings_login_hint_tv"
            app:layout_constraintStart_toStartOf="parent"
            tools:hint="abcdef"
            />

        <TextView
            android:id="@+id/settings_password_hint_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:textSize="12sp"
            android:textColor="?attr/hintColor"
            android:text="@string/settings_password_hint"
            app:layout_constraintTop_toBottomOf="@+id/settings_login_tv"
            app:layout_constraintStart_toStartOf="parent"
            />

        <TextView
            android:id="@+id/settings_password_tv"
            android:layout_width="280dp"
            android:layout_height="42dp"
            android:textSize="16sp"
            android:textColor="?attr/textColor"
            android:gravity="center_vertical"
            android:paddingStart="4dp"
            android:paddingEnd="4dp"
            android:background="@color/colorTextView"
            android:text="@string/settings_password"
            app:layout_constraintTop_toBottomOf="@+id/settings_password_hint_tv"
            app:layout_constraintStart_toStartOf="parent"
            />

        <Button
            android:id="@+id/settings_sign_out_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginStart="8dp"
            android:text="@string/settings_sign_out"
            app:layout_constraintTop_toBottomOf="@+id/settings_password_tv"
            app:layout_constraintStart_toStartOf="parent"
            />

        <Button
            android:id="@+id/settings_sign_in_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginStart="8dp"
            android:text="@string/settings_sign_in"
            app:layout_constraintTop_toBottomOf="@+id/settings_password_tv"
            app:layout_constraintStart_toStartOf="parent"
            android:visibility="invisible"
            />

        <android.support.constraint.ConstraintLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            app:layout_constraintTop_toBottomOf="@id/settings_sign_out_btn"
            >

            <TextView
                android:id="@+id/settings_switch_hint_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="12sp"
                android:textColor="?attr/hintColor"
                android:text="@string/settings_switch_hint"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                />

            <TextView
                android:id="@+id/settings_switch_text_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="12sp"
                android:textColor="?attr/hintColor"
                app:layout_constraintTop_toBottomOf="@id/settings_switch_hint_tv"
                app:layout_constraintStart_toStartOf="parent"
                tools:hint="@string/settings_theme_green"
                />

            <Switch
                android:id="@+id/settings_theme_switch"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_gravity="center"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toEndOf="@id/settings_switch_hint_tv"
                app:layout_constraintBottom_toBottomOf="parent"
                />
        </android.support.constraint.ConstraintLayout>

    </android.support.constraint.ConstraintLayout>

</android.support.constraint.ConstraintLayout>